Align default schema and tests with JS document wrapper

--- a/tests/fixtures/expected/partial.html
+++ b/tests/fixtures/expected/partial.html
@@ -1,1 +1,1 @@
-<p>Before</p><h1>Header</h1><p>Hello Ada</p><p>After</p>
+<article><p>Before</p><h1>Header</h1><p>Hello Ada</p><p>After</p></article>
