--- a/tests/spec/expected/validator_rules.html
+++ b/tests/spec/expected/validator_rules.html
@@ -1,1 +1,1 @@
-<p><panel>Text</panel></p><p><panel><note>Nested</note></panel></p><panel title="A"><p>Title</p></panel>
+<article><p><panel>Text</panel></p><p><panel><note>Nested</note></panel></p><panel title="A"><p>Title</p></panel></article>
