--- a/tests/fixtures/expected/links.html
+++ b/tests/fixtures/expected/links.html
@@ -1,1 +1,1 @@
-<p><a href="https://example.com">Link</a> <img src="https://example.com/img.png" alt="Alt"></p>
+<article><p><a href="https://example.com">Link</a> <img src="https://example.com/img.png" alt="Alt"></p></article>
