--- a/tests/spec/expected/annotations.html
+++ b/tests/spec/expected/annotations.html
@@ -1,1 +1,1 @@
-<h1 class="hero" id="main">Title</h1><p class="note">Paragraph</p>
+<article><h1 class="hero" id="main">Title</h1><p class="note">Paragraph</p></article>
