--- a/tests/spec/expected/renderer_basics.html
+++ b/tests/spec/expected/renderer_basics.html
@@ -1,1 +1,1 @@
-<p>Inline <note>Tag</note> and image <img src="https://example.com/x.png" alt="Alt">.</p><icon></icon>
+<article><p>Inline <note>Tag</note> and image <img src="https://example.com/x.png" alt="Alt">.</p><icon></icon></article>
